# pico_eurobot_2024

./: README.md
pico1/: CMakeLists.txt  pico1.cpp
pico1/external_lib/: CMakeLists.txt
pico1/external_lib/imu/: CMakeLists.txt  imu.cpp  imu.h
pico1/external_lib/imu/MPU6050/: CMakeLists.txt  MPU6050.cpp  MPU6050.h  MPU6050_6Axis_MotionApps_V6_12.h
pico1/external_lib/imu/MPU6050/I2Cdev/: CMakeLists.txt  I2Cdev.cpp  I2Cdev.h
pico1/external_lib/kinematics/: CMakeLists.txt  kinematics.cpp  kinematics.h
pico1/external_lib/motors/: CMakeLists.txt  motors.cpp  motors.h
pico1/external_lib/pico_uart_transport/: CMakeLists.txt  pico_uart_transports.h
pico1/external_lib/rpm/: CMakeLists.txt  rpm.cpp  rpm.h
pico1/external_lib/servo/: servo.cpp  servo.h
pico2/: CMakeLists.txt  pico2.cpp
pico2/external_lib/: CMakeLists.txt
pico2/external_lib/display/: CMakeLists.txt  display.cpp  display.h
pico2/external_lib/display/SSD1306/: CMakeLists.txt  SSD1306.cpp  SSD1306.h
pico2/external_lib/pico_uart_transport/: CMakeLists.txt  pico_uart_transports.c
pico2/external_lib/stepper/: stepper.cpp  stepper.h
pico2/external_lib/stepperV2/: CMakeLists.txt  stepperV2.cpp  stepperV2.h
pico2/external_lib/tft/: tft.cpp  tft.h
pico2/external_lib/tft/ST7735_TFT_lib/: ST7735_TFT.cpp  ST7735_TFT_graphics.cpp
